--- a/examples/integrations/lepton_ai.ipynb
+++ b/examples/integrations/lepton_ai.ipynb
@@ -31,8 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openssm.integrations.lepton_ai.ssm import ChatCompletionSSM\n",
-    "ssm = ChatCompletionSSM()"
+    "from openssm import LeptonLlamaIndexSSM\n",
+    "ssm = LeptonLlamaIndexSSM(name=\"eos\")"
    ]
   },
   {
@@ -43,10 +43,8 @@
     {
      "data": {
       "text/plain": [
-       "[<OpenAIObject at 0x1406c6d40> JSON: {\n",
-       "   \"role\": \"assistant\",\n",
-       "   \"content\": \"You can ask me any question related to EOS and their products. I can provide you with detailed information and assistance regarding the subject. Please feel free to ask.\"\n",
-       " }]"
+       "{'role': 'assistant',\n",
+       " 'content': 'You can ask me any questions related to EOS support and service. I can provide you with detailed information and help you troubleshoot any issues you may encounter.'}"
       ]
      },
      "execution_count": 3,
@@ -60,69 +58,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<OpenAIObject at 0x1406c7e20> JSON: {\n",
-       "   \"role\": \"assistant\",\n",
-       "   \"content\": \"EOS produces approximately 20 models of 3D printers for industrial use. These models vary in terms of size, functionality, and price. You can find more information about the different models on the EOS website.\"\n",
-       " }]"
+       "{'role': 'assistant',\n",
+       " 'content': 'The M290 is a machine that performs a specific task or set of tasks. It is used in industrial settings to ensure the efficient operation of the system. It is important to check the M290 regularly for any errors or malfunctions.'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ssm.discuss(\"How many models are there?\")"
+    "ssm.discuss(\"What does the M290 do?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<OpenAIObject at 0x1406e5e90> JSON: {\n",
-       "   \"role\": \"assistant\",\n",
-       "   \"content\": \"M290 and M400-4 are two different models of 3D printers produced by EOS. M290 is a laser-sintering system designed for industrial use, while M400-4 is a laser-sintering system designed for both industrial and commercial use. The main difference between the two models is the size of the system and the type of powder used. M290 is designed for small-scale production, while M400-4 is designed for larger-scale production.\"\n",
-       " }]"
+       "{'role': 'assistant',\n",
+       " 'content': 'The EOS M290 and the EOS M400 are both laser-sintering systems used for metal powder, but they have some key differences. The M290 is designed for smaller projects and is more portable, while the M400 is designed for larger projects and is more powerful. The M290 has a lower maximum build size and a lower maximum laser power compared to the M400. Additionally, the M290 has a more user-friendly interface and is easier to operate, while the M400 is more complex and requires more maintenance.'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "ssm.discuss(\"What are the key differences between the M290 and the M400?\", \"test_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ssm.discuss(\"What’s the difference between M290 and M400-4?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<OpenAIObject at 0x1406e56c0> JSON: {\n",
-       "   \"role\": \"assistant\",\n",
-       "   \"content\": \"The possible cause of curling open layers on parts is that the recoater remains stuck over the surface of the bed of powder during powder application or collides with parts.\"\n",
-       " }]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ssm.discuss(\"My M290 print has curling open layers. What might be the cause?\")"
    ]
