GPT4 support ftw!

--- a/examples/integrations/openai.ipynb
+++ b/examples/integrations/openai.ipynb
@@ -44,10 +44,8 @@
     {
      "data": {
       "text/plain": [
-       "[<OpenAIObject at 0x142d3a340> JSON: {\n",
-       "   \"role\": \"assistant\",\n",
-       "   \"content\": \"You can ask me anything you're curious about or need assistance with. I'm here to help!\"\n",
-       " }]"
+       "{'role': 'assistant',\n",
+       " 'content': 'I\\'m sorry, but I am an AI language model and I do not have access to personal information about individuals unless it has been shared with me during our conversation. Therefore, I do not know your name or what you are referring to when you ask \"What am I?\" Could you please provide more context or clarify your question?'}"
       ]
      },
      "execution_count": 3,
@@ -56,83 +54,86 @@
     }
    ],
    "source": [
-    "ssm.discuss(\"What can I ask you?\")"
+    "ssm.conversation_tracking = False\n",
+    "ssm.discuss(\"Remember, my name is CTN. I am a chatbot.\")\n",
+    "ssm.discuss(\"What is my name? What am I?\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "07/29/2023 09:00:28 PM [DEBUG]: openssm.utils.canonicalize_user_input (in utils.py line 14) start: user_input: interesting. ok what is the weather like today?\n",
-      "07/29/2023 09:00:28 PM [DEBUG]: openssm.utils.canonicalize_user_input (in utils.py line 40) end: user_input: [{'role': 'user', 'content': 'interesting. ok what is the weather like today?'}]\n",
-      "07/29/2023 09:00:28 PM [DEBUG]: openssm.utils.canonicalize_user_input (in utils.py line 14) start: user_input: [{'role': 'user', 'content': 'interesting. ok what is the weather like today?'}]\n",
-      "07/29/2023 09:00:28 PM [DEBUG]: openssm.utils.canonicalize_user_input (in utils.py line 40) end: user_input: [{'role': 'user', 'content': 'interesting. ok what is the weather like today?'}]\n",
-      "07/29/2023 09:00:28 PM [DEBUG]: openssm.logs.wrapper (in logs.py line 97) Calling _call_lm_api with args: ('self=GPT3CompletionSLM()', 'conversation=[{\\'role\\': \\'user\\', \\'content\\': \\'What can I ask you?\\'}, {\\'role\\': \\'user\\', \\'content\\': \"What\\'s the weather like today?\"}, {\\'role\\': \\'user\\', \\'content\\': \"What\\'s the time?\"}, {\\'role\\': \\'user\\', \\'content\\': \"What\\'s tomorrow\\'s weather?\"}, {\\'role\\': \\'user\\', \\'content\\': \\'interesting. ok what is the weather like today?\\'}]')\n",
-      "07/29/2023 09:00:28 PM [DEBUG]: openssm.logs.wrapper (in logs.py line 97) Calling _make_completion_prompt with args: ('self=GPT3CompletionSLM()', 'conversation=[{\\'role\\': \\'user\\', \\'content\\': \\'What can I ask you?\\'}, {\\'role\\': \\'user\\', \\'content\\': \"What\\'s the weather like today?\"}, {\\'role\\': \\'user\\', \\'content\\': \"What\\'s the time?\"}, {\\'role\\': \\'user\\', \\'content\\': \"What\\'s tomorrow\\'s weather?\"}, {\\'role\\': \\'user\\', \\'content\\': \\'interesting. ok what is the weather like today?\\'}]')\n",
-      "07/29/2023 09:00:28 PM [DEBUG]: openssm.logs.wrapper (in logs.py line 102) Function _make_completion_prompt returned: {\"role\": \"system\", \"content\": \"Complete this conversation with the assistant’s response, up to 2000 words. Use this format: {'role': 'assistant', 'content': 'xxx'}, where 'xxx' is the response. Make sure the entire response is valid JSON, xxx is only a string, and no code of any kind, even if the prompt has code. Escape quotes with \\:\n",
-      "\"}, {\"role\": \"user\", \"content\": \"What can I ask you?\"}, {\"role\": \"user\", \"content\": \"What's the weather like today?\"}, {\"role\": \"user\", \"content\": \"What's the time?\"}, {\"role\": \"user\", \"content\": \"What's tomorrow's weather?\"}, {\"role\": \"user\", \"content\": \"interesting. ok what is the weather like today?\"}\n",
-      "07/29/2023 09:00:35 PM [DEBUG]: openssm.logs.wrapper (in logs.py line 102) Function _call_lm_api returned: [{'role': 'assistant', 'content': 'I got nothing.'}]\n",
-      "07/29/2023 09:00:35 PM [DEBUG]: openssm.utils.canonicalize_query_response (in utils.py line 50) start: response: [{'role': 'assistant', 'content': 'I got nothing.'}]\n",
-      "07/29/2023 09:00:35 PM [DEBUG]: openssm.utils.canonicalize_query_response (in utils.py line 83) start: response: [{'role': 'assistant', 'content': 'I got nothing.'}]\n",
-      "07/29/2023 09:00:35 PM [DEBUG]: openssm.utils.canonicalize_query_response (in utils.py line 50) start: response: [{'role': 'assistant', 'content': 'I got nothing.'}]\n",
-      "07/29/2023 09:00:35 PM [DEBUG]: openssm.utils.canonicalize_query_response (in utils.py line 83) start: response: [{'role': 'assistant', 'content': 'I got nothing.'}]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'role': 'assistant', 'content': 'I got nothing.'}]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ssm.discuss(\"interesting. ok what is the weather like today?\")"
+    "ssm.discuss(\"Remember, my name is CTN. I am a chatbot.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "07/29/2023 09:00:56 PM [DEBUG]: openssm.utils.canonicalize_user_input (in utils.py line 14) start: user_input: What is the sum of 2 and 2?\n",
-      "07/29/2023 09:00:56 PM [DEBUG]: openssm.utils.canonicalize_user_input (in utils.py line 40) end: user_input: [{'role': 'user', 'content': 'What is the sum of 2 and 2?'}]\n",
-      "07/29/2023 09:00:56 PM [DEBUG]: openssm.utils.canonicalize_user_input (in utils.py line 14) start: user_input: [{'role': 'user', 'content': 'What is the sum of 2 and 2?'}]\n",
-      "07/29/2023 09:00:56 PM [DEBUG]: openssm.utils.canonicalize_user_input (in utils.py line 40) end: user_input: [{'role': 'user', 'content': 'What is the sum of 2 and 2?'}]\n",
-      "07/29/2023 09:00:56 PM [DEBUG]: openssm.logs.wrapper (in logs.py line 97) Calling _call_lm_api with args: ('self=GPT3CompletionSLM()', 'conversation=[{\\'role\\': \\'user\\', \\'content\\': \\'What can I ask you?\\'}, {\\'role\\': \\'user\\', \\'content\\': \"What\\'s the weather like today?\"}, {\\'role\\': \\'user\\', \\'content\\': \"What\\'s the time?\"}, {\\'role\\': \\'user\\', \\'content\\': \"What\\'s tomorrow\\'s weather?\"}, {\\'role\\': \\'user\\', \\'content\\': \\'interesting. ok what is the weather like today?\\'}, {\\'role\\': \\'assistant\\', \\'content\\': \\'I got nothing.\\'}, {\\'role\\': \\'user\\', \\'content\\': \\'What is the sum of 2 and 2?\\'}]')\n",
-      "07/29/2023 09:00:56 PM [DEBUG]: openssm.logs.wrapper (in logs.py line 97) Calling _make_completion_prompt with args: ('self=GPT3CompletionSLM()', 'conversation=[{\\'role\\': \\'user\\', \\'content\\': \\'What can I ask you?\\'}, {\\'role\\': \\'user\\', \\'content\\': \"What\\'s the weather like today?\"}, {\\'role\\': \\'user\\', \\'content\\': \"What\\'s the time?\"}, {\\'role\\': \\'user\\', \\'content\\': \"What\\'s tomorrow\\'s weather?\"}, {\\'role\\': \\'user\\', \\'content\\': \\'interesting. ok what is the weather like today?\\'}, {\\'role\\': \\'assistant\\', \\'content\\': \\'I got nothing.\\'}, {\\'role\\': \\'user\\', \\'content\\': \\'What is the sum of 2 and 2?\\'}]')\n",
-      "07/29/2023 09:00:56 PM [DEBUG]: openssm.logs.wrapper (in logs.py line 102) Function _make_completion_prompt returned: {\"role\": \"system\", \"content\": \"Complete this conversation with the assistant’s response, up to 2000 words. Use this format: {'role': 'assistant', 'content': 'xxx'}, where 'xxx' is the response. Make sure the entire response is valid JSON, xxx is only a string, and no code of any kind, even if the prompt has code. Escape quotes with \\:\n",
-      "\"}, {\"role\": \"user\", \"content\": \"What can I ask you?\"}, {\"role\": \"user\", \"content\": \"What's the weather like today?\"}, {\"role\": \"user\", \"content\": \"What's the time?\"}, {\"role\": \"user\", \"content\": \"What's tomorrow's weather?\"}, {\"role\": \"user\", \"content\": \"interesting. ok what is the weather like today?\"}, {\"role\": \"assistant\", \"content\": \"I got nothing.\"}, {\"role\": \"user\", \"content\": \"What is the sum of 2 and 2?\"}\n",
-      "07/29/2023 09:01:04 PM [DEBUG]: openssm.logs.wrapper (in logs.py line 102) Function _call_lm_api returned: [{'role': 'assistant', 'content': 'I got nothing.'}]\n",
-      "07/29/2023 09:01:04 PM [DEBUG]: openssm.utils.canonicalize_query_response (in utils.py line 50) start: response: [{'role': 'assistant', 'content': 'I got nothing.'}]\n",
-      "07/29/2023 09:01:04 PM [DEBUG]: openssm.utils.canonicalize_query_response (in utils.py line 83) start: response: [{'role': 'assistant', 'content': 'I got nothing.'}]\n",
-      "07/29/2023 09:01:04 PM [DEBUG]: openssm.utils.canonicalize_query_response (in utils.py line 50) start: response: [{'role': 'assistant', 'content': 'I got nothing.'}]\n",
-      "07/29/2023 09:01:04 PM [DEBUG]: openssm.utils.canonicalize_query_response (in utils.py line 83) start: response: [{'role': 'assistant', 'content': 'I got nothing.'}]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'role': 'assistant', 'content': 'I got nothing.'}]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "ssm.discuss(\"What have we talked about so far?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssm.discuss(\"What is my name?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssm.discuss(\"Remind me everything I have said to you.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssm.discuss(\"Remind me of my last 3 or 4 messages to you\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssm.discuss(\"Tell me everything I have said in this conversation.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssm.discuss(\"What is my name? What am I?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ssm.discuss(\"What is the sum of 2 and 2?\")"
    ]
