Migration to get LICENSE.md correctly displayed

--- a/examples/integrations/llama_index.ipynb
+++ b/examples/integrations/llama_index.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from openssm import LlamaIndexSSM\n",
-    "ssm = LlamaIndexSSM()\n",
+    "ssm = LlamaIndexSSM(storage_dir=\"./examples/integrations/.openssm/ylecun\")\n",
     "# ssm.read_directory(\"/Users/ctn/Desktop\")"
    ]
   },
@@ -47,7 +47,7 @@
     {
      "data": {
       "text/plain": [
-       "{'role': 'assistant', 'content': ''}"
+       "{'role': 'assistant', 'content': 'role'}"
       ]
      },
      "execution_count": 4,
@@ -56,8 +56,15 @@
     }
    ],
    "source": [
-    "ssm.discuss(\"How did Lincoln die?\")"
+    "ssm.discuss(\"Who is Yann?\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
