Ongoing migration. Main: Azure GPT3/GPT4 support.

--- a/examples/integrations/llama_index.ipynb
+++ b/examples/integrations/llama_index.ipynb
@@ -35,8 +35,47 @@
    "outputs": [],
    "source": [
     "from openssm import LlamaIndexSSM\n",
-    "ssm = LlamaIndexSSM(storage_dir=\"./examples/integrations/.openssm/ylecun\")\n",
-    "# ssm.read_directory(\"/Users/ctn/Desktop\")"
+    "ssm = LlamaIndexSSM(name=\"phu\")\n",
+    "ssm.read_directory()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'role': 'assistant',\n",
+       " 'content': 'Phu is a technology advisor and investor who has been working in the field for over 16 years. They have experience working with organizations such as Diasporic Vietnamese Artists Network (DVAN) and Materiall. Phu has also been involved in the explosive growth of the internet during their time at Yahoo.'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssm.discuss(\"Who is Phu?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssm.discuss(\"What are some of the companies Phu has worked with?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssm.discuss(\"Did Phu go to any university?\")"
    ]
   },
   {
@@ -47,7 +86,8 @@
     {
      "data": {
       "text/plain": [
-       "{'role': 'assistant', 'content': 'role'}"
+       "{'role': 'assistant',\n",
+       " 'content': 'Phu Hoang had various roles and responsibilities during his time at Yahoo. He worked on Yahoo Search, Yahoo Classifieds, Yahoo Metros and Local, Yahoo Marketplace, Yahoo Ads Systems, Yahoo Sports, Yahoo Shopping, Yahoo Auctions, Yahoo PayDirect, Yahoo Billing, Yahoo Commerce Division, Yahoo Media Division, Yahoo Web Search Division (Yahoo, Inktomi, AltaVista, Fast), Yahoo Search Marketing (Overture), and Yahoo Communications and Communities.'}"
       ]
      },
      "execution_count": 4,
@@ -56,8 +96,50 @@
     }
    ],
    "source": [
-    "ssm.discuss(\"Who is Yann?\")"
+    "ssm.discuss(\"List the things Phu did at Yahoo!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
