update experimental SSA code

--- a/examples/notebooks/integrations/LlamaIndex.ipynb
+++ b/examples/notebooks/integrations/LlamaIndex.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import OpenSSM package \"live\" from the source code\n",
+    "# Import OpenSSA package \"live\" from the source code\n",
     "import sys\n",
     "from pathlib import Path\n",
     "sys.path.insert(0, str(Path('../../').resolve()))\n",
@@ -155,7 +155,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "from openssm import LlamaIndexSSM\n",
+    "from openssa import LlamaIndexSSM\n",
     "ssm = LlamaIndexSSM(name=\"avv\")\n",
     "ssm.read_website([\n",
     "    \"https://www.avv.co/\",\n",
@@ -402,7 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openssm.core.ssm.rag_ssm import RAGSSM\n",
+    "from openssa.core.ssm.rag_ssm import RAGSSM\n",
     "ssm = RAGSSM()"
    ]
   },
@@ -412,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssm.read_directory(\".openssm/ylecun\", use_existing_index=True)"
+    "ssm.read_directory(\".openssa/ylecun\", use_existing_index=True)"
    ]
   },
   {
