--- a/examples/notebooks/integrations/OpenAI.ipynb
+++ b/examples/notebooks/integrations/OpenAI.ipynb
@@ -15,13 +15,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import OpenSSM package \"live\" from the source code\n",
+    "# Import OpenSSA package \"live\" from the source code\n",
     "import sys\n",
     "from pathlib import Path\n",
     "sys.path.insert(0, str(Path('../../').resolve()))\n",
     "\n",
     "# Configure logging for some informative output\n",
-    "from openssm import Logs, logger, mlogger\n",
+    "from openssa import Logs, logger, mlogger\n",
     "logger.setLevel(logger.WARNING)\n",
     "mlogger.setLevel(mlogger.WARNING)"
    ]
@@ -47,9 +47,23 @@
     }
    ],
    "source": [
-    "from openssm import AzureGPT3ChatCompletionSSM\n",
+    "from openssa import AzureGPT3ChatCompletionSSM\n",
     "ssm = AzureGPT3ChatCompletionSSM()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
