--- a/examples/Planning-and-Reasoning.ipynb
+++ b/examples/Planning-and-Reasoning.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESOURCE_PATH = Path() / '.FinanceBench' / 'docs' / 'AMD_2022_10K'\n",
+    "RESOURCE_PATH = Path() / 'FinanceBench' / '.data' / 'docs' / 'AMD_2022_10K'\n",
     "assert RESOURCE_PATH.is_dir()\n",
     "\n",
     "resource = FileResource(RESOURCE_PATH)\n",
